@@ -3,11 +3,15 @@ package edu.gcc.BitwiseWizards;
 import static spark.Spark.*;
 
 import com.google.gson.Gson;
+import com.google.gson.JsonParser;
+import com.google.gson.JsonObject;
+import com.google.gson.JsonArray;
 import com.google.gson.GsonBuilder;
 import freemarker.template.Configuration;
 import freemarker.template.Version;
 import spark.ModelAndView;
 import spark.template.freemarker.FreeMarkerEngine;
+import org.mindrot.jbcrypt.BCrypt;
 
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
@@ -36,31 +40,46 @@ public class server {
         get("/register", (rq, rs) -> new ModelAndView(new HashMap<>(), "register.ftl"), fm);
 
         post("/register", (rq, rs) -> {
-            String u = rq.queryParams("username");
+            String u = rq.queryParams("user");
             String p = rq.queryParams("confirmPassword");
             System.out.println("DEBUG register  user=" + u);
             if (u==null||p==null||u.isEmpty()||p.isEmpty()) { rs.redirect("/register?error=missing"); return null; }
-            int id = dbm.insertUser(u, p);
+            // hash it here:
+            String hashed = BCrypt.hashpw(p, BCrypt.gensalt());
+            int id = dbm.insertUser(u, hashed);
             System.out.println("DEBUG register  id=" + id);
             rs.redirect(id==-1?"/register?error=fail":"/login");
             return null;
         });
 
         post("/login", (rq, rs) -> {
-            String u = rq.queryParams("username");
-            String p = Optional.ofNullable(rq.queryParams("confirmPassword"))
-                    .orElse(rq.queryParams("password"));
-            System.out.println("DEBUG login  u=" + u + "  p=" + p);
-            if (u==null||p==null||u.trim().isEmpty()||p.trim().isEmpty()){
-                rs.redirect("/login?error=Missing+credentials");
+            String email = rq.queryParams("user");
+            String plain  = rq.queryParams("password");
+            if (email==null || plain==null || email.isBlank() || plain.isBlank()) {
+                rs.redirect("/login?error=missing");
                 return null;
             }
-            int id = dbm.getUserID(u, p);
-            System.out.println("DEBUG login  id=" + id);
-            if (id>0){ rq.session().attribute("user", new User(id,u,p)); rs.redirect("/schedules"); }
-            else     { rs.redirect("/login?error=invalid"); }
+
+            // 1) pull the BCrypt hash
+            String hash = dbm.getPasswordHashByEmail(email);
+            // 2) verify it
+            if (hash == null || !BCrypt.checkpw(plain, hash)) {
+                rs.redirect("/login?error=invalid");
+                return null;
+            }
+            // 3) fetch the user ID by email only
+            int id = dbm.getUserIDByEmail(email);
+            if (id <= 0) {
+                rs.redirect("/login?error=invalid");
+                return null;
+            }
+
+            // 4) success!
+            rq.session().attribute("user", new User(id, email, /* you can pass null here or the hash */ null));
+            rs.redirect("/schedules");
             return null;
         });
+
 
         /* ------------------------------------------------------------------ */
         /*  SCHEDULE LIST PAGE                                                */
@@ -88,6 +107,27 @@ public class server {
             rs.redirect("/schedules");
             return null;
         });
+
+        // DELETE A SCHEDULE
+        post("/delete-schedule", (rq, rs) -> {
+            User user = rq.session().attribute("user");
+            if (user == null) {
+                rs.redirect("/login");
+                return null;
+            }
+
+            // parse the submitted schedule ID
+            int schedId = Integer.parseInt(rq.queryParams("schedId"));
+            System.out.println("DEBUG /delete-schedule  schedId=" + schedId);
+
+            // remove all courses & personal items then the schedule itself
+            dbm.deleteUserSchedule(user.getId(), schedId);
+
+            // back to the list view
+            rs.redirect("/schedules");
+            return null;
+        });
+
 
         /* ------------------------------------------------------------------ */
         /*  SINGLE SCHEDULE PAGE                               */
@@ -129,25 +169,63 @@ public class server {
         /*  API ENDPOINTS                                                     */
         /* ------------------------------------------------------------------ */
         get("/api/schedule", (rq, rs) -> {
-            try{
+            try {
                 User u = rq.session().attribute("user");
-                if (u==null){ rs.status(401); return "unauth"; }
+                if (u == null) {
+                    rs.status(401);
+                    return "unauth";
+                }
 
                 int sid = Integer.parseInt(rq.queryParams("schedId"));
-                System.out.println("DEBUG /api/schedule sid=" + sid);
+                String sem = Optional.ofNullable(rq.queryParams("semester")).orElse("");
+                System.out.println("DEBUG /api/schedule sid=" + sid + " sem=" + sem);
 
                 List<ScheduleItem> all = new ArrayList<>();
-                all.addAll(dbm.getScheduleCourses(sid));
-                all.addAll(dbm.getSchedulePersonalItems(sid));
+                all.addAll(dbm.getScheduleCourses(sid));         // these are CourseItem instances
+                all.addAll(dbm.getSchedulePersonalItems(sid));   // these are ScheduleItem
+
+                List<Map<String, Object>> out = new ArrayList<>();
+                for (ScheduleItem si : all) {
+                    Map<String, Object> m = new HashMap<>();
+                    m.put("id", si.getId());
+                    m.put("name", si.getName());
+                    m.put("meetingTimes", si.getMeetingTimes());
+                    m.put("semester", sem);
+                    m.put("type", si instanceof CourseItem ? "course" : "personal");
+
+
+                    if (si instanceof CourseItem) {
+                        CourseItem c = (CourseItem) si;
+                        m.put("credits", c.getCredits());
+                        m.put("location", c.getLocation());
+                        m.put("courseNumber", c.getCourseNumber());
+                        m.put("section", c.getSection());
+                        m.put("description", c.getDescription());
+                        m.put("professors", c.getProfessors());
+                    } else {
+                        // personal items don’t have those fields
+                        m.put("credits", null);
+                        m.put("location", "NA");
+                        m.put("courseNumber", "NA");
+                        m.put("section", "NA");
+                        m.put("description", "NA");
+                        m.put("professors", Collections.emptyList());
+                    }
+
+                    out.add(m);
+                }
 
                 rs.type("application/json");
-                return new GsonBuilder().create().toJson(all);
+                return new GsonBuilder().create().toJson(out);
 
-            }catch(Exception ex){
+            }
+            catch (Exception ex) {
                 System.out.println("DEBUG ERROR /api/schedule"); ex.printStackTrace();
-                rs.status(500); return "server error";
+                rs.status(500);
+                return "server error";
             }
         });
+
 
 
         post("/add-course", (rq, rs) -> {
@@ -211,6 +289,57 @@ public class server {
                 rs.status(500);
                 return new Gson().toJson(Collections.singletonMap("error","remove failed"));
             }
+        });
+
+        // 1) Add Personal Item
+        post("/add-item", (rq, rs) -> {
+            User u = rq.session().attribute("user");
+            if (u == null) halt(401);
+
+            int sid      = Integer.parseInt(rq.queryParams("schedId"));
+            String name  = rq.queryParams("name");
+            String mtRaw = rq.queryParams("meetingTimes");
+
+            // parse the JSON string into our Map<Character,List<Integer>>
+            JsonObject mtJson = JsonParser.parseString(mtRaw).getAsJsonObject();
+            Map<Character, List<Integer>> meetingTimes = new HashMap<>();
+            for (var entry : mtJson.entrySet()) {
+                char day = entry.getKey().charAt(0);
+                JsonArray arr = entry.getValue().getAsJsonArray();
+                meetingTimes.put(day, List.of(arr.get(0).getAsInt(), arr.get(1).getAsInt()));
+            }
+
+            // conflict detection
+            List<ScheduleItem> existing = new ArrayList<>();
+            existing.addAll(dbm.getScheduleCourses(sid));
+            existing.addAll(dbm.getSchedulePersonalItems(sid));
+            ScheduleItem candidate = new ScheduleItem(name, meetingTimes);
+            candidate.setName(name);
+            candidate.setMeetingTimes(meetingTimes);
+            for (ScheduleItem si: existing) {
+                if (si.conflicts(candidate)) {
+                    rs.status(409);
+                    return new Gson().toJson(Map.of("error", "Conflicts with “" + si.getName() + "”"));
+                }
+            }
+
+            // persist and return new ID
+            int newId = dbm.addPersonalItemToSchedule(sid, name, meetingTimes);
+            rs.type("application/json");
+            return new Gson().toJson(Map.of("success", true, "itemId", newId));
+        });
+
+// 2) Remove Personal Item
+        post("/remove-item", (rq, rs) -> {
+            User u = rq.session().attribute("user");
+            if (u == null) halt(401);
+
+            int sid    = Integer.parseInt(rq.queryParams("schedId"));
+            int itemId = Integer.parseInt(rq.queryParams("itemId"));
+
+            dbm.removePersonalItemFromSchedule(sid, itemId);
+            rs.type("application/json");
+            return new Gson().toJson(Map.of("success", true));
         });
 
         /* --------------  SEARCH -------------- */
